--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,14 @@
 <!-- Create your form here -->
+<h1>Student Form</h1>
+
+<%= form_tag students_path do %>
+<label>First name:</label><br>
+<%= text_field_tag :first_name %><br><br>
+
+<label>Last name:</label><br>
+<%= text_field_tag :last_name %><br><br>
+
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+<input type="submit" value="Submit Student">
+
+<% end %>
