--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,12 @@
 <!-- Create your form here -->
+<h1>Student Form</h1>
+
+<%= form_tag students_path do %>
+  <%= label_tag 'first_name', "Student First Name" %><br>
+  <%= text_field_tag :first_name %><br>
+
+  <%= label_tag 'last_name', "Student Last Name" %><br>
+  <%= text_field_tag :last_name %><br>
+
+  <%= submit_tag "Submit Student" %>
+<% end %>
