--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,10 @@
 <!-- Create your form here -->
+
+<%= form_tag students_path do %>
+  <label> Student Form </label><br>
+  <label> Student First Name: </label><br>
+  <input type = "text" id = "first_name" name="first_name"> <br>
+  <input type = "text" id = "last_name" name="last_name"> <br>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+  <input type="submit" value="Submit Student">
+<% end %>
